--- a/Hands-on lab/lab-files/developer/content-api/Dockerfile
+++ b/Hands-on lab/lab-files/developer/content-api/Dockerfile
@@ -1,12 +1,9 @@
-FROM node:dubnium-alpine AS base
+FROM node:alpine AS base
 RUN apk -U add curl
 WORKDIR /usr/src/app
-ENV CONTENT_API_URL http://localhost:3001
-EXPOSE 3000
+EXPOSE 3001
 
-FROM node:dubnium AS build
-RUN npm install -g @angular/cli@~8.3.4
-
+FROM node:argon AS build
 WORKDIR /usr/src/app
 
 # Install app dependencies
@@ -15,9 +12,8 @@ RUN npm install
 
 # Bundle app source
 COPY . /usr/src/app
-RUN ng build 
 
-FROM base as final
+FROM base AS final
 WORKDIR /usr/src/app
 COPY --from=build /usr/src/app .
-CMD [ "node", "app.js" ]
+CMD [ "npm", "start" ]
